RESOLVED FIXED 255521
[css-nesting] Fix rule selector after change from CSS OM
https://bugs.webkit.org/show_bug.cgi?id=255521
Summary [css-nesting] Fix rule selector after change from CSS OM
Matthieu Dubet
Reported 2023-04-17 07:33:47 PDT
After a modification of a nested rule selector (via CSSOM), the selector is not properly resolved https://github.com/WebKit/WebKit/blob/main/LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/invalidation-004-expected.txt#L3
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-17 07:34:27 PDT
Matthieu Dubet
Comment 2 2023-04-17 07:43:11 PDT
EWS
Comment 3 2023-04-17 10:28:19 PDT
Committed 263026@main (9eba2e0de0fb): <https://commits.webkit.org/263026@main> Reviewed commits have been landed. Closing PR #12801 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.