[CSS Nesting] Rebuild rule set from original (not resolved) selector https://bugs.webkit.org/show_bug.cgi?id=255521 rdar://108137916

Reviewed by Antti Koivisto.

When there is a modification of a selector by CSSOM,
the next resolution should work on the original user-written selector,
not on the previously resolved selector.

* LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/invalidation-004-expected.txt:
* Source/WebCore/style/RuleSetBuilder.cpp:
(WebCore::Style::RuleSetBuilder::resolveSelectorListWithNesting):

Canonical link: https://commits.webkit.org/263026@main